overflow fix

--- a/new/sheet.css
+++ b/new/sheet.css
@@ -2,7 +2,6 @@ html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockqu
 
 body {
 	font-family:'archivo', sans  serif;
-	overflow: hidden;
 }
 
 .container {
@@ -115,9 +114,16 @@ body {
 	color: #E70020;
 }
 
+.actions-two {
+	margin-left: 20px;
+}
+
+.actions-two:hover {
+	margin-left: 20px;
+}
+
 .what {
 	display: inline-block;
-	margin: 8px;
 	padding:0px;
 	font-size: 20px;
 	padding-bottom: 7px;
@@ -130,13 +136,9 @@ body {
 
 .what:focus{
    outline: 0;
-   padding: 6px;
-   margin: 0px;
-   border: 2px dotted #E70020;
-   border-radius: 10px;
 }
 
-.squiggle:hover {
+.squiggle:hover, .squiggle:focus {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift 0.5s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23E70020' stroke-width='1' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
   background-position: 0px 100%;
   background-size: auto 6px;
